# model-trainer

./: .gitignore  README.md  config.py  dataset.py  disease_classifier.py  evaluate.py  leaf_detector.py  pipeline.py  prepare_detector_dataset.py  pyproject.toml  requirements.txt  train_classifier.py  train_detector.py
