[project]
name = "coffee-disease-detection"
version = "0.1.0"
description = "Pipeline de deteccion y clasificacion de enfermedades en hojas de cafe"
requires-python = ">=3.10,<3.11"
dependencies = [
  "tensorflow-cpu==2.10.0",
  "tensorflow-directml-plugin; platform_system == 'Windows'",
  "tensorflow-io-gcs-filesystem==0.31.0",
  "opencv-python>=4.8.0",
  "numpy>=1.24.0,<2.0.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "scikit-learn>=1.3.0",
  "pandas>=2.0.0",
]

[tool.uv]
package = false
